# CMakePlayground

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.cpp
plugin/: CMakeLists.txt  hello.cpp  hello.h
